--- a/pug/gulpv3-sass-pug/package.json
+++ b/pug/gulpv3-sass-pug/package.json
@@ -3,7 +3,7 @@
   "version": "3.2.0",
   "description": "Сборка проекта для верстки",
   "author": "gp-studio.ru",
-  "scripts": {"start": "gulp"},
+  "scripts": {"start": "gulp", "copy": "gulp copy"},
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
